# gpg-body

./: AUTHORS  ChangeLog  Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac  libtool
Debug/: config.h
Debug/po/: Makefile
Debug/src/: Makefile
autom4te.cache/: output.0  output.1  traces.1
debian/: README.Debian  control  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gpg-body.doc-base.EX  init.d.ex  postrm.ex  preinst.ex  prerm.ex
po/: Makefile  Makefile.in
src/: Makefile  Makefile.in  gpg_body  main.cc
src/.deps/: main.Po
trunk/: MANUAL.odt  Makefile  Makefile.am  config.h  config.status  configure  configure.ac  libtool
trunk/Debug/: Makefile  config.status  libtool
trunk/Debug/po/: Makefile.in  POTFILES
trunk/Debug/src/: gpg-mail  gpg-mail.c  mailtest.eml
trunk/Debug/src/.deps/: main.Po
trunk/autom4te.cache/: output.0  output.1  traces.1
trunk/debian/: README.source  changelog  control  copyright  docs  gpg-body.cron.d.ex  gpg-body.default.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  watch.ex
trunk/po/: Makefile  Makefile.in
trunk/src/: Makefile  Makefile.am  main.cc
trunk/src/.deps/: main.Po
